--- a/src/components/directory/directory.styles.scss
+++ b/src/components/directory/directory.styles.scss
@@ -3,4 +3,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  animation: 1s ease-out 0s 1 slideInFromLeft;
+  @keyframes slideInFromLeft {
+    0% {
+      transform: translateX(-50%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
 }
