--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -5,6 +5,8 @@
   height: 350px;
   align-items: center;
   position: relative;
+  border: 1px solid black;
+  padding: 20px;
 
   img {
     width: 100%;
@@ -40,12 +42,12 @@
     font-size: 18px;
 
     .name {
-      width: 80%;
+      width: 70%;
       margin-bottom: 15px;
     }
 
     .price {
-      width: 20%;
+      width: 25%;
     }
   }
 }
