--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -40,6 +40,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 18px;
+    font-weight: bold;
 
     .name {
       width: 70%;
