--- a/src/routes/Header-Footer/footer.styles.scss
+++ b/src/routes/Header-Footer/footer.styles.scss
@@ -2,12 +2,21 @@
   margin-top: 80px;
   height: 300px;
   background-color: aliceblue;
+  text-align: center;
+  @media (max-width: 600px) {
+    height: fit-content;
+    margin-bottom: -600px;
+  }
 }
 
 .copyright {
   background-color: #333333;
   color: white;
   padding-bottom: 2px;
+  @media (max-width: 600px) {
+    margin-top: 600px;
+    text-align: center;
+  }
   & a:hover {
     background-color: #4e4a4a;
     color: white;
