--- a/src/routes/shop/shop.styles.scss
+++ b/src/routes/shop/shop.styles.scss
@@ -3,4 +3,14 @@
   grid-template-columns: repeat(4, 1fr);
   column-gap: 10px;
   row-gap: 50px;
+  @media (max-width: 600px) {
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 100px;
+  }
+}
+
+@media (max-width: 600px) {
+  .footer-menu {
+    display: none;
+  }
 }
