--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,3 +1,11 @@
+.hidden-cart-dropdown {
+  height: 340px;
+  width: 240px;
+  top: 140px;
+  right: auto;
+  z-index: 5;
+}
+
 .cart-dropdown-container {
   position: absolute;
   width: 240px;
@@ -5,10 +13,11 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
+  margin-left: -75px;
   border: 1px solid black;
   background-color: white;
   top: 140px;
-  right: 410px;
+  right: auto;
   z-index: 5;
 
   .empty-message {
