--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -2,11 +2,12 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  height: 350px;
+  height: 450px;
   align-items: center;
   position: relative;
   border: 1px solid black;
   padding: 20px;
+  padding-bottom: 100px;
   @media (max-width: 600px) {
     padding-bottom: 60px;
   }
@@ -19,10 +20,10 @@
   }
 
   button {
-    width: 80%;
+    width: 90%;
     opacity: 0.7;
     position: absolute;
-    top: 255px;
+    top: 388px;
     display: none;
     @media (max-width: 600px) {
       top: 220px;
@@ -49,12 +50,12 @@
     font-weight: bold;
 
     .name {
-      width: 70%;
+      width: 75%;
       margin-bottom: 15px;
     }
 
     .price {
-      width: 25%;
+      width: 20%;
     }
   }
 }
