crud operations and styling

--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -38,7 +38,7 @@
     border: 1px solid black;
 
     &:hover {
-      background-color: black;
+      background-color: #213350;
       color: white;
       border: none;
     }
