--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -8,6 +8,9 @@
   border: 1px solid black;
   padding: 20px;
   padding-bottom: 100px;
+  &:hover {
+    border-width: 3px;
+  }
   @media (max-width: 600px) {
     padding-bottom: 60px;
   }
@@ -36,7 +39,7 @@
     }
 
     button {
-      opacity: 0.85;
+      opacity: 1;
       display: flex;
     }
   }
