--- a/src/components/directory-item/directory-item.styles.scss
+++ b/src/components/directory-item/directory-item.styles.scss
@@ -19,6 +19,7 @@
 
     & .directory-item-body {
       opacity: 1;
+      display: flex;
     }
   }
 
@@ -44,7 +45,7 @@
   .directory-item-body {
     height: 90px;
     padding: 0 25px;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
