--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -6,10 +6,17 @@
   padding: 15px 0;
   font-size: 20px;
   align-items: center;
+  @media (max-width: 700px) {
+    flex-direction: column;
+    text-align: center;
+  }
 
   .image-container {
     width: 23%;
     padding-right: 15px;
+    @media (max-width: 700px) {
+      width: 70%;
+    }
 
     img {
       width: 100%;
@@ -20,10 +27,16 @@
   .quantity,
   .price {
     width: 23%;
+    @media (max-width: 700px) {
+      width: 80%;
+    }
   }
 
   .quantity {
     display: flex;
+    @media (max-width: 700px) {
+      justify-content: center;
+    }
 
     .arrow {
       cursor: pointer;
