--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -12,6 +12,9 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid darkgrey;
+    @media (max-width: 700px) {
+      display: none;
+    }
 
     .header-block {
       text-transform: capitalize;
