--- a/src/routes/Header-Footer/footer.styles.scss
+++ b/src/routes/Header-Footer/footer.styles.scss
@@ -2,25 +2,18 @@
   margin-top: 80px;
   height: 300px;
   background-color: aliceblue;
-  @media (max-width: 600px) {
-    height: fit-content;
-    margin-bottom: -600px;
-    text-align: center;
-  }
+  height: fit-content;
+  margin-bottom: -600px;
+  text-align: center;
 }
 
 .copyright {
   background-color: #333333;
   color: white;
   padding-bottom: 2px;
-  @media (max-width: 1200px) {
-    margin-top: 600px;
-    text-align: center;
-  }
-  @media (max-width: 600px) {
-    margin-top: 600px;
-    text-align: center;
-  }
+  margin-top: 600px;
+  text-align: center;
+
   & a:hover {
     background-color: #4e4a4a;
     color: white;
@@ -53,5 +46,11 @@ ul {
         color: rgb(94, 94, 94);
       }
     }
+  }
+}
+
+.footer-menu {
+  @media (max-width: 1200px) and (min-width: 900px) {
+    display: none;
   }
 }
