--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -13,6 +13,7 @@
   }
   @media (max-width: 600px) {
     padding-bottom: 100px;
+    height: 300px;
   }
 
   img {
@@ -31,6 +32,9 @@
 
     @media (min-width: 600px) {
       top: 390px;
+    }
+    @media (max-width: 600px) {
+      top: 240px;
     }
   }
 
@@ -56,10 +60,16 @@
     .name {
       width: 75%;
       margin-bottom: 15px;
+      @media (max-width: 600px) {
+        font-size: 14px;
+      }
     }
 
     .price {
       width: 20%;
+      @media (max-width: 600px) {
+        font-size: 14px;
+      }
     }
   }
 }
