--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -15,6 +15,10 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
+  @media (max-width: 600px) {
+    min-width: 100px;
+    font-size: 12px;
+  }
 
   &:hover {
     background-color: white;
